src/test/deca/syntax/invalid/homemade/unclosed_if_condition_synt.res
src/test/deca/syntax/invalid/homemade/unclosed_if_condition.deca:11:7: missing '(' at 'true'
